Fix invisible script errors (especially for application script)

--- a/src/goupile/client/goupile.css
+++ b/src/goupile/client/goupile.css
@@ -167,7 +167,7 @@ button:not(:disabled) { cursor: pointer; }
 
 /* -------------------- Utility -------------------- */
 
-#gp_overview_log {
+#gp_error {
     position: fixed;
     top: 2.5em;
     right: 0;
@@ -177,7 +177,7 @@ button:not(:disabled) { cursor: pointer; }
     white-space: pre-wrap;
     z-index: 9999;
 }
-.gp_overview.broken {
+#gp_overview.broken {
     filter: grayscale(100%);
     opacity: 0.5;
 }
